--- a/snippets/product-card-grid.liquid
+++ b/snippets/product-card-grid.liquid
@@ -64,7 +64,7 @@
           {{ product.title }}
         </div>
      <div class="grid-view-item__meta">
-      {% include 'grid-price' %}
+      {% include 'product-price' %}
     </div>
 
     {% if section.settings.show_vendor %}
