--- a/snippets/product-image-custom.liquid
+++ b/snippets/product-image-custom.liquid
@@ -62,7 +62,7 @@
           {{ product.title }}
         </div>
      <div class="grid-view-item__meta">
-      {% include 'grid-price' %}
+      {% include 'product-price' %}
     </div>
 
     {% if section.settings.show_vendor %}
