--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -1,8 +1,15 @@
-<div class="page-width cart-page" data-section-id="{{ section.id }}" data-section-type="cart-template">
+<div class="cart-page"
+     data-section-id="{{ section.id }}"
+     data-section-type="cart-template"
+  {% if section.settings.cart_ajax_enable == true %}
+  data-cart-view="data-cart-view"
+  {% endif %}>
 
-  {% if cart.item_count > 0 %}
-
-    <form action="/cart" method="post" novalidate class="cart">
+  <form action="{{ routes.cart_url }}"
+        data-full-cart-content
+        method="post"
+        novalidate
+        class="cart {% if cart.item_count == 0 %}display-custom{% endif %}">
       <table>
         <thead class="cart__row cart__header">
           <th colspan="2">{{ 'cart.label.product' | t }}</th>
@@ -12,149 +19,79 @@
           <th class="text-right">{{ 'cart.label.total' | t }}</th>
         </thead>
         <tbody>
-          {% for item in cart.items %}
-            <tr class="cart__row border-bottom line{{ forloop.index }} cart-flex{% if forloop.first %} border-top{% endif %}">
-              <td class="cart__image-wrapper cart-flex-item">
-                <a href="{{ item.url | within: collections.all }}">
-                  <img class="cart__image" src="{{ item | img_url: '95x95', scale: 2 }}" alt="{{ item.title | escape }}">
-                </a>
-              </td>
-              <td class="cart__meta small--text-left cart-flex-item">
-                <div class="list-view-item__title">
-                  <a href="{{ item.url }}">
-                    {{ item.product.title }}
-                    {% if item.quantity > 1 %}
-                      <span class="medium-up--hide"><span class="visually-hidden">{{ 'cart.label.quantity' | t }}</span>(x{{ item.quantity }})</span>
-                    {% endif %}
-                  </a>
-                </div>
-                {% unless item.variant.title contains 'Default' %}
-                  <div class="cart__meta-text">
-                    {% for option in item.product.options %}
-                      {{ option }}: {{ item.variant.options[forloop.index0] }}<br/>
-                    {% endfor %}
-                  </div>
-                {% endunless %}
-
-                {% comment %}
-                  Optional, loop through custom product line items if available
-
-                  Line item properties come in as having two parts. The first part will be passed with the default form,
-                  but p.last is the actual custom property and may be blank. If it is, don't show it.
-
-                  For more info on line item properties, visit:
-                    - http://docs.shopify.com/support/your-store/products/how-do-I-collect-additional-information-on-the-product-page-Like-for-a-monogram-engraving-or-customization
-                {% endcomment %}
-                {%- assign property_size = item.properties | size -%}
-                {% if property_size > 0 %}
-                  <div class="cart__meta-text">
-                    {% for p in item.properties %}
-                      {% unless p.last == blank %}
-                        {{ p.first }}:
-
-                        {% comment %}
-                          Check if there was an uploaded file associated
-                        {% endcomment %}
-                        {% if p.last contains '/uploads/' %}
-                          <a href="{{ p.last }}">{{ p.last | split: '/' | last }}</a>
-                        {% else %}
-                          {{ p.last }}
-                        {% endif %}
-                      {% endunless %}
-                    {% endfor %}
-                  </div>
-                {% endif %}
-				</td>
-              <td class="cart__price-wrapper cart-flex-item">
-                {{ item.price | money }}
-
-                {% for discount in item.discounts %}
-                  <div class="cart-item__discount medium-up--hide">{{ discount.title }}</div>
-                {% endfor %}
-
-                <div class="cart__edit medium-up--hide">
-                  <button type="button" class="btn btn--secondary btn--small js-edit-toggle cart__edit--active" data-target="line{{ forloop.index }}">
-                    <span class="cart__edit-text--edit">{{ 'cart.general.edit' | t }}</span>
-                    <span class="cart__edit-text--cancel">{{ 'cart.general.cancel' | t }}</span>
-                  </button>
-                </div>
-              </td>
-              
-              <td class="cart__update-wrapper cart-flex-item text-right">
-                <a href="/cart/change?line={{ forloop.index }}&amp;quantity=0" class="btn btn--small btn--secondary cart__remove medium-up--hide">{{ 'cart.general.remove' | t }}</a>
-                <div class="cart__qty">
-                  <label for="updates_{{ item.key }}" class="cart__qty-label">{{ 'cart.label.quantity' | t }}</label>
-                  <input class="cart__qty-input" type="number" name="updates[]" id="updates_{{ item.key }}" value="{{ item.quantity }}" min="0" pattern="[0-9]*">
-                </div>
-                <input type="submit" name="update" class="btn btn--small cart__update medium-up--hide" value="{{ 'cart.general.update' | t }}">
-              </td>
-              <td class="cart-flex-item text-center">
-                <p class="small--hide">
-                  <a href="/cart/change?line={{ forloop.index }}&amp;quantity=0" class="cart__remove">X</a>
-                </p>
-              </td>
-              <td class="text-right small--hide">
-                {% if item.original_line_price != item.line_price %}
-                  <div class="cart-item__original-price"><s>{{ item.original_line_price | money }}</s></div>
-                {% endif %}
-
-                <div>
-                  {{ item.line_price | money }}
-                </div>
-
-                {% for discount in item.discounts %}
-                  <div class="cart-item__discount">{{ discount.title }}</div>
-                {% endfor %}
-              </td>
-            </tr>
-          {% endfor %}
+        {% if section.settings.cart_ajax_enable == true %}
+          {% render 'cart-item-ajax' %}
+        {% else %}
+          {% render 'cart-item' for cart.items as item %}
+        {% endif %}
         </tbody>
       </table>
 
       <footer class="cart__footer">
         <div class="grid">
-          {% if section.settings.cart_notes_enable %}
+          {% if section.settings.cart_notes_enable or settings.giftwrap != blank %}
             <div class="grid__item medium-up--one-half cart-note">
-              <label for="CartSpecialInstructions" class="cart-note__label small--text-center">{{ 'cart.general.note' | t }}</label>
-              <textarea name="note" id="CartSpecialInstructions" class="cart-note__input">{{ cart.note }}</textarea>
+              {% assign gift_product = all_products[settings.giftwrap] %}
+
+              <label class="gift-product">
+                <input type="checkbox"
+                       class="visually-hidden"
+                       data-cart-toggle="{{- gift_product.selected_or_first_available_variant.id -}}"
+                       data-gift-product />
+                <span class="fake-checkbox"></span>
+
+                {{ settings.giftwrap_text}} {{ gift_product.selected_or_first_available_variant.price | money | replace: '.00', '' }}
+
+                <svg class="gift-product__icon" width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M14 7.00005C11.0968 7.00003 6.37895 3.73386 8.55641 1.55646C10.7339 -0.620952 14.0001 4.09682 14 7.00005ZM14 7.00005C16.9032 7.00003 21.6211 3.73386 19.4436 1.55646C17.2661 -0.620952 13.9999 4.09682 14 7.00005ZM14 7.50005V25.5001M2 13.0001H25C25.5523 13.0001 26 12.5523 26 12.0001V8.00005C26 7.44777 25.5523 7.00005 25 7.00005H2C1.44772 7.00005 1 7.44777 1 8.00005V12.0001C1 12.5523 1.44772 13.0001 2 13.0001ZM3 13.0001V24.0001C3 25.1046 3.89543 26.0001 5 26.0001H22C23.1046 26.0001 24 25.1046 24 24.0001V13.0001H3Z" stroke="black"/>
+                </svg>
+              </label>
+
+              {% if section.settings.cart_notes_enable %}
+                <label for="CartSpecialInstructions" class="cart-note__label small--text-center">{{ 'cart.general.note' | t }}</label>
+                <textarea name="note" id="CartSpecialInstructions" class="cart-note__input">{{ cart.note }}</textarea>
+              {% endif %}
             </div>
           {% endif %}
-          <div class="grid__item text-right small--text-center{% if section.settings.cart_notes_enable %} medium-up--one-half{% endif %}">
+          <div class="grid__item text-right small--text-center{% if section.settings.cart_notes_enable or settings.giftwrap != blank %} medium-up--one-half{% endif %}">
             <div>
               <span class="cart__subtotal-title">{{ 'cart.general.subtotal' | t }}</span>
-              <span class="cart__subtotal">{{ cart.total_price | money }}</span>
+              <span class="cart__subtotal" data-rv-text="cart.total_price | money Currency.currentCurrency">{{ cart.total_price | money }}</span>
             </div>
             {% if cart.total_discounts > 0 %}
               <div class="cart__savings">
                 {{ 'cart.general.savings' | t }}
-                <span class="cart__savings-amount">{{ cart.total_discounts | money }}</span>
+                <span class="cart__savings-amount" data-rv-text="cart.total_discount | money Currency.currentCurrency">{{ cart.total_discounts | money }}</span>
               </div>
             {% endif %}
             <div class="cart__shipping">{{ 'cart.general.shipping_at_checkout' | t }}</div>
             <p class="affirm-as-low-as" data-page-type="cart" data-amount="{{cart.total_price}}"></p>
 
-            <a href="collections/all" class="btn btn--secondary cart__update cart__continue--large small--hide" >{{ 'cart.general.continue_shopping' | t }}</a>
+            <a href="{{ routes.all_products_collection_url }}" class="btn btn--secondary cart__update cart__continue--large small--hide" >{{ 'cart.general.continue_shopping' | t }}</a>
+            {%- unless section.settings.cart_ajax_enable -%}
             <input type="submit" name="update" class="btn btn--secondary cart__update cart__update--large small--hide" value="{{ 'cart.general.update' | t }}">
+            {%- endunless -%}
             <input type="submit" name="checkout" class="btn btn--small-wide" value="{{ 'cart.general.checkout' | t }}">
             {% if additional_checkout_buttons %}
               <div class="additional-checkout-buttons">{{ content_for_additional_checkout_buttons }}</div>
             {% endif %}
-            
+
           </div>
         </div>
       </footer>
     </form>
-  {% else %}
-    <div class="empty-page-content text-center">
-      <h1>{{ 'cart.general.title' | t }}</h1>
-      <p class="cart--empty-message">{{ 'cart.general.empty' | t }}</p>
-      <div class="cookie-message">
-        <p>{{ 'cart.general.cookies_required' | t }}</p>
-      </div>
-      <a href="/" class="btn product-form__cart-submit product-form__cart-submit--small">{{ 'general.404.link' | t }}</a>
+
+  <div class="empty-page-content text-center  {% if cart.item_count > 0 %}display-custom{% endif %}"
+       data-empty-cart-content>
+    <h1>{{ 'cart.general.title' | t }}</h1>
+    <p class="cart--empty-message">{{ 'cart.general.empty' | t }}</p>
+    <div class="cookie-message">
+      <p>{{ 'cart.general.cookies_required' | t }}</p>
     </div>
-  {% endif %}
+    <a href="/" class="btn product-form__cart-submit product-form__cart-submit--small">{{ 'general.404.link' | t }}</a>
+  </div>
 </div>
+
 
 <script>
   $( ".ajaxcart__product" ).wrapAll( "<div class='new2' />");
@@ -169,6 +106,59 @@
         "id": "cart_notes_enable",
         "label": "Enable cart notes",
         "default": false
+      },
+      {
+        "type": "checkbox",
+        "id": "cart_ajax_enable",
+        "label": {
+          "cs": "Povolit automatické aktualizace košíku",
+          "da": "Aktivér automatisk opdatering af indkøbskurv",
+          "de": "Automatische Warenkorbaktualisierungen aktivieren",
+          "en": "Enable automatic cart updates",
+          "es": "Habilitar las actualizaciones automáticas del carrito de compra",
+          "fi": "Ota automaattinen ostoskorin päivitykset käyttöön",
+          "fr": "Activer les mises à jour automatiques",
+          "hi": "स्वचालित कार्ट अपडेट सक्षम करें",
+          "it": "Abilita aggiornamenti automatici carrello",
+          "ja": "自動カートの更新を有効にする",
+          "ko": "자동 카트 업데이트 활성화하기",
+          "nb": "Aktiver automatiske oppdateringer av handlekurven",
+          "nl": "Automatische winkelwagen-updates inschakelen",
+          "pl": "Włącz automatyczne aktualizacje koszyka",
+          "pt-BR": "Permitir atualizações automáticas do carrinho",
+          "pt-PT": "Ativar atualizações automáticas do carrinho",
+          "sv": "Aktivera automatiska uppdateringar av varukorgen",
+          "th": "เปิดใช้การอัปเดตตะกร้าสินค้าอัตโนมัติ",
+          "tr": "Otomatik sepet güncellemelerini etkinleştir",
+          "vi": "Bật cập nhật giỏ hàng tự động",
+          "zh-CN": "启用购物车自动更新功能",
+          "zh-TW": "啟用自動更新購物車"
+        },
+        "info": {
+          "cs": "Aktualizuje košík hned, jak zákazník provede změny.",
+          "da": "Opdaterer indkøbskurven, så snart kunden foretager ændringer",
+          "de": "Aktualisiert den Warenkorb, sobald Kundenänderungen vorgenommen werden",
+          "en": "Updates the cart as soon as customer changes are made",
+          "es": "Actualiza el carrito de compra tan pronto como el cliente realice cambios",
+          "fi": "Päivittää ostoskorin heti, kun asiakkaan muutokset on tehty",
+          "fr": "Mise à jour du panier dès que les modifications apportées aux clients ont été effectuées",
+          "hi": "ग्राहक के द्वारा परिवर्तन करते ही कार्ट को अपडेट हो जाता है",
+          "it": "Aggiorna il carrello appena il cliente apporta le modifiche",
+          "ja": "お客様が変更されるとすぐにカートを更新します",
+          "ko": "고객 변경 시 카트를 업데이트합니다.",
+          "nb": "Oppdaterer handlekurven så snart kundens endringer er gjort",
+          "nl": "De winkelwagen wordt bijgewerkt zodra de klant wijzigingen aanbrengt",
+          "pl": "Aktualizuje koszyk, gdy tylko wprowadzone zostaną zmiany u klienta",
+          "pt-BR": "Atualiza o carrinho assim que o cliente faz alterações",
+          "pt-PT": "Atualiza o carrinho assim que o cliente faz alterações",
+          "sv": "Uppdaterar varukorgen så snart kundändringar görs",
+          "th": "อัปเดตตะกร้าสินค้าเมื่อลูกค้าได้ทำการเปลี่ยนแปลง",
+          "tr": "Müşteri değişiklikleri yapıldıktan sonra sepet güncellenir",
+          "vi": "Cập nhật giỏ hàng ngay khi khách hàng thay đổi",
+          "zh-CN": "客户做出更改后立即更新购物车",
+          "zh-TW": "在顧客進行變更時立即更新購物車"
+        },
+        "default": true
       }
     ]
   }
