[BF] Featured Collection - load slider on section load

--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -129,6 +129,7 @@ window.addEventListener('DOMContentLoaded', function () {
   }
   
   window.addEventListener('resize', initFeaturedCollectionSlick)
+  document.addEventListener('shopify:section:load', initFeaturedCollectionSlick)
   initFeaturedCollectionSlick()
 })
 </script>
